<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#09c" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo"
        android:layout_centerVertical="true"
        android:background="@color/start_button_background"
        android:text="@string/start_button"
        android:textColor="@color/start_button_foreground"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/textView_zielgruppe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_start"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/zielgruppe"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/zielgruppeText"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView_genehmigung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_zielgruppe"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/genehmigung"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/genehmigungText"
        android:textSize="12sp" />

</RelativeLayout>